# taleb-harness

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.claude/hooks/: addition_budget.py  antifragile.py  auto_commit.py  barbell.py  black_swan.py  fold_discipline.py  lindy.py  no_ghosts.py  scope.py  shell_guard.py  skin_in_the_game.py  stressor.py
harness/: agent.py  cli.py  guards.py  lessons.py  principles.py  tools.py
hooks/: _lib.py  addition_budget.py  fold_discipline.py  hooks.json  no_ghosts.py  skin_in_the_game.py  stressor.py
tests/: conftest.py  test_addition_budget_hook.py  test_barbell_hook.py  test_black_swan_hook.py  test_fold_discipline_hook.py  test_guards.py  test_lessons.py  test_no_ghosts_hook.py  test_scope_hook.py  test_shell_guard_hook.py  test_skin_in_the_game_hook.py
